@startuml US02-CD
skinparam packageStyle rectangle
skinparam shadowing false
skinparam linetype polyline
skinparam classAttributeIconSize 0

class ReviewRegistrationUI {
}

class ReviewRegistrationController {
    + ReviewRegistrationController()
    + getPendingRequests() : List<RegistrationRequest>
    + getPendingRequestsAsDTO() : List<RegistrationRequestDTO>
    + approveRequestByEmail(email : String) : void
    + rejectRequestByEmail(email : String, reason : String) : void
    + approveRequest(request : RegistrationRequest) : void
    + rejectRequest(request : RegistrationRequest, reason : String) : void
}

class RegistrationRequestMapper {
    + toDTO(request : RegistrationRequest) : RegistrationRequestDTO
    + toDTO(requests : List<RegistrationRequest>) : List<RegistrationRequestDTO>
}

class RegistrationRequestDTO {
    - fullName : String
    - email : String
    - role : UserRole
    - submissionDate : Date
    - identificationDocument : String
    + getFullName() : String
    + getEmail() : String
    + getRole() : UserRole
    + getSubmissionDate() : Date
    + getIdentificationDocument() : String
}

class RegistrationRequest {
    - fullName : String
    - email : String
    - password : String
    - identificationDocument : String
    - submissionDate : Date
    - status : RegistrationStatus
    - rejectionReason : String
    + approve() : void
    + reject(reason : String) : void
    + getFullName() : String
    + getEmail() : String
    + getPassword() : String
    + getRole() : UserRole
    + getStatus() : RegistrationStatus
}

class RegistrationRequestRepository {
    + getPendingRequests() : List<RegistrationRequest>
    + findPendingByEmail(email : String) : RegistrationRequest
}

class AuthenticationRepository {
    + getCurrentUserSession() : UserSession
    + addUserWithRole(name : String, email : String, password : String, roleId : String) : void
}

class Repositories {
    - Repositories()
    + {static} getInstance() : Repositories
    + getRegistrationRequestRepository() : RegistrationRequestRepository
    + getAuthenticationRepository() : AuthenticationRepository
}

interface EmailService {
    + sendNotification(toEmail : String, subject : String, body : String) : void
}

class GmailEmailService {
    + sendNotification(toEmail : String, subject : String, body : String) : void
}

class DeiEmailService {
    + sendNotification(toEmail : String, subject : String, body : String) : void
}

class EmailServiceFactory {
    + {static} create() : EmailService
}

enum UserRole {
    POLITICAL_AGENT
    CITIZEN
    JOURNALIST
    ETHICS_COMMITTEE
    ADMINISTRATOR
}

enum RegistrationStatus {
    PENDING
    APPROVED
    REJECTED
}

ReviewRegistrationUI .> ReviewRegistrationController
ReviewRegistrationUI ..> RegistrationRequestDTO
ReviewRegistrationController --> "1" RegistrationRequestMapper : registrationRequestMapper
RegistrationRequestMapper ..> RegistrationRequestDTO : creates
RegistrationRequestMapper ..> RegistrationRequest
ReviewRegistrationController .> Repositories
ReviewRegistrationController ..> RegistrationRequestRepository
ReviewRegistrationController ..> AuthenticationRepository
ReviewRegistrationController ..> RegistrationRequest
Repositories -> "1" Repositories : instance
Repositories --> "1" RegistrationRequestRepository : registrationRequestRepository
Repositories --> "1" AuthenticationRepository : authenticationRepository
ReviewRegistrationController --> EmailService : emailService
ReviewRegistrationController ..> EmailServiceFactory
GmailEmailService ..|> EmailService
DeiEmailService ..|> EmailService
EmailServiceFactory ..> EmailService : creates
EmailServiceFactory ..> GmailEmailService : «instantiate» (default)

note right of EmailServiceFactory
    reads email.properties (email.provider.class) and
    instantiates the EmailService by name via Java
    reflection (Class.forName / newInstance) — Protected
    Variations: a new provider is added by config, no code change
end note

RegistrationRequest "1" --> "1" UserRole : role
RegistrationRequest "1" --> "1" RegistrationStatus : status

@enduml
